<resources>
    <string name="app_name">大明</string>


    <string name="activity_empty">Activity(empty)</string>
    <string name="activity_placeholder">Activity(placeholder)</string>
    <string name="activity_with_convertor">Activity with Convertor</string>
    <string name="single_fragment_custom">single Fragment(custom)</string>
    <string name="multiple_fragment">multiple Fragment</string>
    <string name="multiple_fragment_viewpager">multiple Fragment+ViewPager</string>
    <string name="view_timeout">View(timeout)</string>
    <string name="animat_callback">Animat Callback</string>
    <string name="keep_title_bar_in_fragment">keep title bar in Fragment</string>
    <string name="loadsir">LoadSir</string>
    <string name="success">Success</string>
    <string name="keep_title_bar">keep title bar</string>
    <string name="fine_no_data">fine, no data.</string>
    <string name="click_me_to_retry">click me to retry!</string>
    <string name="best_practices">best practices</string>
    <string name="default_loadsir_callback">default LoadSir Callback</string>
    <string name="keep_title_bar_in_activity">keep title bar in Activity</string>


    <string name="quality_manager">质检管理</string>
    <string name="stock_in_manager">入库管理</string>
    <string name="stock_out_manager">出库管理</string>
    <string name="inner_manager">内部管理</string>
    <string name="query">查询</string>

    <string name="quality_analysis">质检单</string>
    <string name="put_on">上架单</string>
    <string name="stock_in">入库单</string>
    <string name="stock_out">出库单</string>
    <string name="check">盘点单</string>
    <string name="transfer">移库单</string>
    <string name="put_out">下架单</string>
</resources>
